<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Reset</string>
    <string name="titleMain">My Nanodegree Apps!</string>
    <string name="firstAppName">Spotify Streamer</string>
    <string name="secondAppName">Scores App</string>
    <string name="thirdAppName">Library App</string>
    <string name="fourthAppName">Build It Bigger</string>
    <string name="fifthAppName">XYZ Reader</string>
    <string name="sixthAppName">Capstone : My own app</string>
    <string name="button_click_toast">This button will launch my %s app!</string>
</resources>
