<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bryanmaruani.myappportfolio.MainActivity"
    android:background="#ffdfeaf1"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleMain"
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/firstAppName"
            android:id="@+id/firstAppButton"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/black"
            android:background="#F08C35"
            android:onClick="showToast"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/secondAppName"
            android:id="@+id/secondAppButton"
            android:textColor="@android:color/black"
            android:background="#F08C35"
            android:layout_marginTop="10dp"
            android:onClick="showToast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/thirdAppName"
            android:id="@+id/thirdAppButton"
            android:textColor="@android:color/black"
            android:background="#F08C35"
            android:layout_marginTop="10dp"
            android:onClick="showToast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/fourthAppName"
            android:id="@+id/fourthAppButton"
            android:textColor="@android:color/black"
            android:background="#F08C35"
            android:layout_marginTop="10dp"
            android:onClick="showToast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/fifthAppName"
            android:id="@+id/fifthAppButton"
            android:textColor="@android:color/black"
            android:background="#F08C35"
            android:layout_marginTop="10dp"
            android:onClick="showToast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sixthAppName"
            android:id="@+id/sixthAppButton"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            android:layout_marginTop="10dp"
            android:onClick="showToast"/>
    </LinearLayout>

</RelativeLayout>
